--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
+
+    "paths": {
+      "@/components*": ["./src/components/*"]
+    },
 
     /* Linting */
     "strict": true,
