--- a/package.json
+++ b/package.json
@@ -12,12 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.7",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.3",
-    "@mui/x-data-grid": "^6.10.2",
-    "@mui/x-date-pickers": "^6.10.2",
     "@redux-devtools/extension": "^3.2.5",
+    "bulma": "^0.9.4",
     "dayjs": "^1.11.9",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-unused-imports": "^3.0.0",
