--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     }
   },
   "jest": {
-    "setupFilesAfterEnv": ["./setupTests.js"]
+    "setupFilesAfterEnv": [
+      "./setupTests.js"
+    ]
   }
 }
