--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,18 +17,18 @@
     "baseUrl": ".",
 
     "paths": {
-      "@/components": ["./src/components"],
-      "@/enums": ["./src/enums"],
-      "@/hooks": ["./src/hooks"],
-      "@/interfaces": ["./src/interfaces"],
-      "@/pages": ["./src/pages"],
-      "@/schemas": ["./src/schemas"],
-      "@/styles": ["./src/styles"],
-      "@/utils": ["./src/utils"],
-      "@/request": ["./src/request"],
-      "@/types": ["./src/types"],
-      "@/redux": ["./src/redux"],
-      "@/tests": ["./tests"]
+      "@/components*": ["./src/components*"],
+      "@/enums*": ["./src/enums*"],
+      "@/hooks*": ["./src/hooks*"],
+      "@/interfaces*": ["./src/interfaces*"],
+      "@/pages*": ["./src/pages*"],
+      "@/schemas*": ["./src/schemas*"],
+      "@/styles*": ["./src/styles*"],
+      "@/utils*": ["./src/utils*"],
+      "@/request*": ["./src/request*"],
+      "@/types*": ["./src/types*"],
+      "@/redux*": ["./src/redux*"],
+      "@/tests*": ["./tests*"]
     },
 
     /* Linting */
