--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "todo-list",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite --open --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "test": "jest",
+    "coverage": "jest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -51,8 +50,7 @@
     "jsdom": "^22.1.0",
     "redux-mock-store": "^1.5.4",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.4"
+    "vite": "^4.4.5"
   },
   "config": {
     "commitizen": {
@@ -61,7 +59,25 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "./setupTests.js"
-    ]
+      "./setupTests.ts"
+    ],
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.[jt]sx?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "<rootDir>/src/__mocks__/fileMock.js",
+      "^@/components/(.*)$": "<rootDir>/src/components/$1",
+      "^@/enums/(.*)$": "<rootDir>/src/enums/$1",
+      "^@/hooks/(.*)$": "<rootDir>/src/hooks/$1",
+      "^@/interfaces/(.*)$": "<rootDir>/src/interfaces/$1",
+      "^@/pages/(.*)$": "<rootDir>/src/pages/$1",
+      "^@/schemas/(.*)$": "<rootDir>/src/schemas/$1",
+      "^@/styles/(.*)$": "<rootDir>/src/styles/$1",
+      "^@/utils/(.*)$": "<rootDir>/src/utils/$1",
+      "^@/request/(.*)$": "<rootDir>/src/request/$1",
+      "^@/types/(.*)$": "<rootDir>/src/types/$1",
+      "^@/redux/(.*)$": "<rootDir>/src/redux/$1"
+    }
   }
 }
