--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://username.github.io/todo-list",
+  "homepage": "https://username.github.io/todo-list.github.io/",
   "name": "todo-list",
   "private": true,
   "version": "0.0.0",
