--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://username.github.io/todo-list.github.io/",
+  "homepage": "https://GusVF.github.io/todo-list",
   "name": "todo-list",
   "private": true,
   "version": "0.0.0",
@@ -21,7 +21,6 @@
     "dayjs": "^1.11.9",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -49,6 +48,7 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0",
